--- a/package.json
+++ b/package.json
@@ -19,15 +19,8 @@
   },
   "homepage": "https://github.com/asari-mtr/cautious-palm-tree#readme",
   "devDependencies": {
-    "css-loader": "^5.2.6",
-    "csv-loader": "^3.0.3",
-    "json5": "^2.2.0",
-    "style-loader": "^3.0.0",
-    "toml": "^3.0.0",
     "webpack": "^5.40.0",
-    "webpack-cli": "^4.7.2",
-    "xml-loader": "^1.2.1",
-    "yamljs": "^0.3.0"
+    "webpack-cli": "^4.7.2"
   },
   "dependencies": {
     "lodash": "^4.17.21"
