--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/asari-mtr/cautious-palm-tree#readme",
   "devDependencies": {
+    "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2"
   },
