--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
     "start": "webpack serve --open",
+    "server": "node server.js",
     "build": "webpack"
   },
   "repository": {
@@ -21,9 +22,11 @@
   },
   "homepage": "https://github.com/asari-mtr/cautious-palm-tree#readme",
   "devDependencies": {
+    "express": "^4.17.1",
     "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
+    "webpack-dev-middleware": "^3.7.3",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
